--- a/biblio/references.bib
+++ b/biblio/references.bib
@@ -15,6 +15,16 @@
 %%%papers
 %%%%%%%%%
 
+@article{pr_gong2022ACL,
+	title = {Less is More: Adaptive Curriculum Learning for Thyroid Nodule Diagnosis},
+	author = {Gong, Haifan and Cheng, Hui and Xie, Yifan and Tan, Shuangyi and Chen, Guanqi and Chen, Fei and Li, Guanbin},
+	journal = {Lecture Notes in Computer Science (including subseries Lecture Notes in Artificial Intelligence and Lecture Notes in Bioinformatics)},	
+	volume={13434 LNCS},
+	pages = {248-257},
+	year={2022},
+	doi = {10.1007/978-3-031-16440-8_24}
+}
+
 @inproceedings{pr_vaswani2017attentionisallneed,
 	title = {Attention is all you need},
 	author = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N. and Kaiser, Łukasz and Polosukhin, Illia},
