--- a/4/desarrollo.tex
+++ b/4/desarrollo.tex
@@ -28,7 +28,7 @@ Cabe destacar que este modelo híbrido fue inspirado por el trabajo presentado p
 \begin{figure}[H]
 	\begin{center}
 		\includegraphics[width=0.60\textwidth]{4/figures/hybrid_arc.png}
-		\caption[Imágenes de ultrasonido de la tiroides generadas]{Imágenes de ultrasonido de la tiroides generadas. \\
+		\caption[Arquitectura híbrida CNN + ViT]{Arquitectura híbrida CNN + ViT. \\
 		Fuente: \cite{pr_JERBI2023autoclassViTGAN}. \textit{Automatic classification of ultrasound thyroids images using vision transformers and generative adversarial networks}.}
 		\label{4:fig101}
 	\end{center}
