change in keywords

--- a/0/resumen.tex
+++ b/0/resumen.tex
@@ -12,7 +12,7 @@ Por estos motivos, y tomando en cuenta el grado de desarrollo actual del extenso
 Se utilizaron las modernas técnicas del Deep Learning para desarrollar los distintos modelos de clasificación de imágenes de ultrasonido de nódulos tiroideos. Las arquitecturas empleadas en esta investigaciób fueron las basadas en Redes Neuronales Convolucionales y los Vision Transformers, además de distintos modelos híbridos (CNN + ViT). También se hicieron pruebas con una nueva forma de Aumento de Datos empleando la red DCGAN. Todos las métricas obtenidas de los modelos fueron analizadas para lograr determinar el de mejor desempeño. Es así que se obtuvo un modelo con arquitectura híbrida con un valor de 77.20\% de Accuracy, 77.97\% de Recall y 67.65\% de Precision, siendo este el modelo de mejor desempeño frente a los demás entrenados.
 \newline
 
-\textbf{Palabras claves: } Aprendizaje profundo, Redes Neuronales Convolucionales, Vision Transfomers, imágenes, ultrasonido, tiroides, clasificación.
+\textbf{Palabras claves: } Aprendizaje profundo, Redes Neuronales Convolucionales, Vision Transfomers, imágenes, ultrasonido, tiroides.
 
 \clearpage
 %\vspace{0.5cm}
@@ -25,4 +25,4 @@ For these reasons, and taking into account the current degree of development of 
 Modern Deep Learning techniques were used to develop the different classification models for ultrasound images of thyroid nodules. The architectures used in this research were based on Convolutional Neural Networks and Vision Transformers, as well different hybrid models (CNN + ViT). A new form of Data Augmentation using the DCGAN network was also tested. All the metrics obtained from the models were analyzed to determine the best performing model. Thus, a model with hybrid architecture was obtained with a value of 77.20\% in Accuracy, 77.97\% in Recall and 67.65\% in Precision, being this the best performing model compared to the others trained.
 \newline
 
-\textbf{Keywords: } Deep Learning, Convolutional Neural Networks, Vision Transfomers, images, ultrasound, thyroid, classification.
+\textbf{Keywords: } Deep Learning, Convolutional Neural Networks, Vision Transfomers, images, ultrasound, thyroid.
